# model/resUser.go
@@ -1,6 +1,8 @@
 package model
 
-import "time"
+import (
+	ti "TestGin/util"
+)
 
 type UserResponse struct {
 	ID        uint   `json:"id"`
@@ -14,17 +16,11 @@ type UserResponse struct {
 	DeletedAt string `json:"deleted_at"`
 }
 
-// FormatTime 格式化时间
-func FormatTime(t time.Time) string {
-	layout := "2006-01-02 15:04:05"
-	return t.Format(layout)
-}
-
 // UserToResponse 用于将 User 转换为 UserResponse，时间字段格式化为字符串
 func UserToResponse(u User) UserResponse {
 	var deletedAt string
 	if u.DeletedAt.Valid {
-		deletedAt = FormatTime(u.DeletedAt.Time)
+		deletedAt = ti.FormatTime(u.DeletedAt.Time)
 	} else {
 		deletedAt = ""
 	}
@@ -35,8 +31,8 @@ func UserToResponse(u User) UserResponse {
 		Phone:     u.Phone,
 		Role:      u.Role,
 		Status:    u.Status,
-		CreatedAt: FormatTime(u.CreatedAt),
-		UpdatedAt: FormatTime(u.UpdatedAt),
+		CreatedAt: ti.FormatTime(u.CreatedAt),
+		UpdatedAt: ti.FormatTime(u.UpdatedAt),
 		DeletedAt: deletedAt,
 	}
 }
